--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
         <title>index page</title>
     </head>
     <body>
-        hello world!
-        <button id="startTeamManager">Team Manager</button>
+        welcome to the main page
+        <a id="startTeamManager" href="/teamManager">Team Manager</a>
         <script src="js/index.js" type="text/javascript"></script>
     </body>
 </HTML>
