--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,18 @@
     </head>
     <body>
         welcome to the main page
-        <a id="startTeamManager" href="/teamManager">Team Manager</a>
+        <ul>
+            <li>
+                <a id="startTeamManager" href="/teamManager">Team Manager</a>
+            </li>
+            <li>
+                <a id="startPlayerManager" href="/playerManager">Player Manager</a>
+            </li>
+            <li>
+                <a id="startGameManager" href="/gameManager">Game Manager</a>   
+            </li>
+        </ul>
+
         <script src="js/index.js" type="text/javascript"></script>
     </body>
 </HTML>
