added game picker html and js... still need to handle pick click event

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
       <li>
         <a id="startGameManager" href="/gameManager">Game Manager</a>
       </li>
+      <li>
+        <a id="startGamePicker" href="/gamePicker">Game Picker</a>
+      </li>
     </ul>
     <!--
         <script src="js/index.js" type="text/javascript"></script>
