--- a/public/scoreboard.html
+++ b/public/scoreboard.html
@@ -28,6 +28,8 @@
           <!-- Button triggers new movie to be added -->
           <input id="view-scoreboard" class="btn btn-success" type="submit" value="View"><br>
 
+          <input id="view-todays-games" class="btn btn-danger" type="submit" value="View"><br>
+
          
         </div>
 
