working on scorekeeper

--- a/public/scoreboard.html
+++ b/public/scoreboard.html
@@ -28,8 +28,11 @@
           <!-- Button triggers new movie to be added -->
           <input id="view-scoreboard" class="btn btn-success" type="submit" value="View"><br>
 
-          <input id="view-todays-games" class="btn btn-danger" type="submit" value="View"><br>
+          <input id="view-todays-games" class="btn btn-danger" type="submit" value="View Today's Games"><br>
 
+          <input id="view-past-games" class="btn btn-info" type="submit" value="View Past Games"><br>
+
+          <input id="view-future-games" class="btn btn-warning" type="submit" value="View Future Games"><br>
          
         </div>
 
