--- a/public/scorekeeper.html
+++ b/public/scorekeeper.html
@@ -16,6 +16,9 @@
     <div class="jumbotron">
       <h1 class="text-center">Scorekeeper</h1>
     </div>
+    <div class="clockContainer">
+      <h1 class="text-center" id="gameClock">100</h1>
+    </div>
 
     <div class="container">
       <div class="row">
