--- a/public/scorekeeper.html
+++ b/public/scorekeeper.html
@@ -17,7 +17,7 @@
       <h1 class="text-center">Scorekeeper</h1>
     </div>
     <div class="clockContainer">
-      <h1 class="text-center" id="gameClock">100</h1>
+      <h1 class="text-center" id="gameClock">&nbsp;</h1>
     </div>
 
     <div class="container">
