--- a/public/scoretracker.html
+++ b/public/scoretracker.html
@@ -9,21 +9,22 @@
     />
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
     <h1>Goal!!</h1>
-    <table>
+    <table id="goalTable">
       <tr>
         <th>Game:</th>
-        <th>Player:</th>
         <th>Team:</th>
+        <th>Player:</th>
         <th>Time Remaining:</th>
       </tr>
       <tr>
         <td id="game"></td>
-        <td id="player"></td>
         <td id="team"></td>
+        <td id="player"></td>
         <td id="timeRemaining"></td>
       </tr>
     </table>
