--- a/public/scoretracker.html
+++ b/public/scoretracker.html
@@ -20,7 +20,8 @@
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
-    <h1>Game Tracker</h1>
+    <h1>Score Tracker</h1>
+    <h2 id="gameTime"></h2>
     <table id="goalTable" class="table table-striped">
       <tr>
         <th>Game</th>
