--- a/public/scoretracker.html
+++ b/public/scoretracker.html
@@ -22,6 +22,8 @@
   <body>
     <h1>Score Tracker</h1>
     <h2 id="gameTime"></h2>
+    <h2 id="homeScore">Home: 0</h2>
+    <h2 id="visitorScore">Visitor: 0</h2>
     <table id="goalTable" class="table table-striped">
       <tr>
         <th>Game</th>
