scoretracker displays team name, player name and jersey instead of ids

--- a/public/scoretracker.html
+++ b/public/scoretracker.html
@@ -26,15 +26,15 @@
     <h2 id="visitorScore">Visitor: 0</h2>
     <table id="goalTable" class="table table-striped">
       <tr>
-        <th>Game</th>
         <th>Team</th>
         <th>Player</th>
+        <th>Jersey</th>
         <th>Time Remaining</th>
       </tr>
       <tr>
-        <td id="game"></td>
         <td id="team"></td>
         <td id="player"></td>
+        <td id="jersey"></td>
         <td id="timeRemaining"></td>
       </tr>
     </table>
