--- a/public/scorekeeper.html
+++ b/public/scorekeeper.html
@@ -45,27 +45,23 @@
       <input id="start-game" class="btn btn-success" type="submit" value="Start Game" />
     </div>
 
+
+
     <div class="offset-2 col-lg-4 text-center">
       <input id="stop-game" class="btn btn-danger" type="submit" value="Stop Game" />
     </div>
   </div>
   <div class="container" style="margin-bottom:30px">
 
-    <div class="row">
-      <div class="col-4 text-center home-div">
+    <div class="row display-row">
+      <div class="col-4 offset-1 text-center home-div">
         <div class="col-12 ">
-          <h3>Home Team</h3>
+          <h4>Home Team</h4>
         </div>
         <div class="col-12">
           <h3 id="home-name"></h3>
         </div>
-        <div class="offset-3 col-6 text-center">
-          <input id="home-team-goal" class="btn btn-primary game-button" type="submit" value="Home Team Goal"
-            data-toggle="modal" data-target="#selectHomeTeamPlayerModal" /><br />
-        </div>
-        <div class="offset-3 col-6 text-center">
-          <input id="home-team-penalty" class="btn btn-warning game-button" type="submit" value="Home Team Penalty" /><br />
-        </div>
+
       </div>
 
       <!-- <div class="col-6 text-center"></div>
@@ -74,7 +70,7 @@
     </div> -->
 
       <!-- goal-div -->
-      <div class="col-4 text-center">
+      <div class="col-2 text-center" style="margin-top:20px">
         <div class="scorelog" style="display:none"><span id="hscore"></span><span id="vscore"></span></div>
       </div>
 
@@ -82,21 +78,37 @@
 
       <div class="col-4 text-center visitor-div">
         <div class="col-12">
-          <h3>Visitor Team</h3>
+          <h4>Visitor Team</h4>
         </div>
         <div class="col-12">
           <h3 id="visitor-name"></h3>
         </div>
-        <div class="offset-3 col-6 text-center">
-          <input id="visitor-team-goal" class="btn btn-secondary game-button" type="submit" value="Visitor Team Goal"
-            data-toggle="modal" data-target="#selectVisitorTeamPlayerModal" /><br />
-        </div>
-        <div class="offset-3 col-6 text-center">
-          <input id="visitor-team-penalty" class="btn btn-dark game-button" type="submit" value="Visitor Team Penalty" /><br />
-        </div>
+
+
       </div>
     </div>
     <!-- ... -->
+    <div class="row">
+      <div class=" col-6 text-center">
+        <input id="home-team-goal" class="btn btn-primary game-button" type="submit" value="Home Team Goal" data-toggle="modal"
+          data-target="#selectHomeTeamPlayerModal" /><br />
+      </div>
+      <div class="col-6 text-center">
+        <input id="visitor-team-goal" class="btn btn-secondary game-button" type="submit" value="Visitor Team Goal"
+          data-toggle="modal" data-target="#selectVisitorTeamPlayerModal" /><br />
+      </div>
+    </div>
+    <div class="row">
+      <div class=" col-6 text-center">
+        <input id="home-team-penalty" class="btn btn-warning game-button" type="submit" value="Home Team Penalty" /><br />
+      </div>
+      <div class="col-6 text-center">
+        <input id="visitor-team-penalty" class="btn btn-dark game-button" type="submit" value="Visitor Team Penalty" /><br />
+      </div>
+    </div>
+
+
+
 
   </div>
   <!-- end of container-->
