home button added

--- a/public/index.html
+++ b/public/index.html
@@ -152,7 +152,7 @@
       </div>
     </div>
     <div class="row text-center">
-      <div class="col-6"><a href="/gameselect"><button class="funkyButton" id="startGameSelect" href="">Game Select for
+      <div class="col-6"><a href="/gameselect"><button class="funkyButton" id="startGameSelect">Game Select for
             Parent / Client / End User</button></a></div>
     </div>
 
