--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
   <!-- Bootstrap-Core-CSS -->
   <!-- <link rel="stylesheet" href="../public/styles/styles.css" type="text/css" media="all" /> -->
   <!-- Style-CSS -->
-  <link href="css/font-awesome.min.css" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <!-- Font-Awesome-Icons-CSS -->
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -151,9 +152,6 @@
         <a href="/teamManager"><button type="button" id="manage-btn" class="btn btn-default button">Manage</button></a>
       </div>
     </div>
-
-
-    <i class="fa fa-group"></i>
 
     <footer class="page-footer footer">
       <div class="copy_right text-right ml-auto mr-sm-5 mr-4">
