--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
   text-decoration: none;
   overflow: hidden;
   cursor: pointer;
+  box-shadow: 5px 5px 3px rgb(43, 42, 42);
 }
 
 .button:after {
@@ -142,14 +143,14 @@
         <!-- Collapsible content -->
       </nav>
     </div>
-    <div class="container" style="padding-top:160px;padding-left:60px">
-      <div class="row">
-        <h1 class="text-center" style="padding-left:25px">Scorekeepers</h1>
+    <div class="container float-right col-6 text-center" style="padding-top:160px;padding-left:60px">
+      <div class="row text-center" style="margin-left:25px">
+        <h1>Scorekeepers</h1>
       </div>
-      <div class="row" style="padding-top:40px;">
-        <a href="/gameselect"> <button type="button" id="score-btn" class="btn btn-default button">Scores
+      <div class="row text-center" style="margin-top:60px">
+        <a href="/gameselect"> <button type="button" id="score-btn" class="btn btn-default button"><b>View Scores</b>
           </button></a>
-        <a href="/teamManager"><button type="button" id="manage-btn" class="btn btn-default button">Manage</button></a>
+        <a href="/teamManager"><button type="button" id="manage-btn" class="btn btn-default button"><b>Manage</b></button></a>
       </div>
     </div>
 
