--- a/public/scorekeeper.html
+++ b/public/scorekeeper.html
@@ -75,7 +75,7 @@
 
           <!-- goal-div -->
           <div class="col-2 text-center" style="margin-top:20px">
-            <div class="scorelog" style="display:none"><span id="hscore"></span><span id="vscore"></span></div>
+            <div class="scorelog"><span id="hscore"></span><span id="vscore"></span></div>
           </div>
 
           <!-- visitor div -->
