20190213 Add back overwritten code from game select and completed other issues

--- a/public/managerpage.html
+++ b/public/managerpage.html
@@ -35,15 +35,12 @@
     <div class="jumbotron container">
         <div class="row text-center">
             <div class="col-6"><a href="/teamManager"><button class="funkyButton" id="startTeamManager"><i class="fa fa-group"></i>
-                        Team Manager</button></a></div>
-            <div class="col-6"><a href="/playerManager"><button class="funkyButton" id="startPlayerManager">Player
-                        Manager</button></div>
+                        Manage Teams</button></a></div>
+            <div class="col-6"><a href="/playerManager"><button class="funkyButton" id="startPlayerManager">Manage Players</button></div>
         </div>
         <div class="row text-center">
-            <div class="col-6"><a href="/gameManager"><button class="funkyButton" id="startGameManager" href="">Game
-                        Manager</button></a></div>
-            <div class="col-6"><a href="/gamePicker"><button class="funkyButton" id="startGamePicker" href="">Game
-                        Picker</button></a></div>
+            <div class="col-6"><a href="/gameManager"><button class="funkyButton" id="startGameManager" href="">Manage Games</button></a></div>
+            <div class="col-6"><a href="/gamePicker"><button class="funkyButton" id="startGamePicker" href="">Select Game</button></a></div>
         </div>
 
     </div>
