--- a/public/gameselect.html
+++ b/public/gameselect.html
@@ -51,7 +51,7 @@
               <div class="col-lg-12">
                 <div class="card text-center">
                   <b>Scoreboard below </b>
-                  <div class="scores-appear-here"></div>
+                  <div class="scores-appear-here-view-all-games"></div>
                 </div>
               </div>
             </div>
@@ -74,7 +74,7 @@
               <div class="col-lg-12">
                 <div class="card text-center">
                   <b>Scoreboard below </b>
-                  <div class="scores-appear-here"></div>
+                  <div class="scores-appear-here-view-todays-games"></div>
                 </div>
               </div>
             </div>
@@ -97,7 +97,7 @@
               <div class="col-lg-12">
                 <div class="card text-center">
                   <b>Scoreboard below </b>
-                  <div class="scores-appear-here"></div>
+                  <div class="scores-appear-here-view-past-games"></div>
                 </div>
               </div>
             </div>
@@ -120,7 +120,7 @@
               <div class="col-lg-12">
                 <div class="card text-center">
                   <b>Scoreboard below </b>
-                  <div class="scores-appear-here"></div>
+                  <div class="scores-appear-here-view-future-games"></div>
                 </div>
               </div>
             </div>
@@ -139,26 +139,34 @@
 
     function generateBtn() {
       $(".btn").on("click", function () {
-        $(".scores-appear-here").empty();
+        $(".scores-appear-here-view-all-games").empty();
+          $(".scores-appear-here-view-past-games").empty();
+          $(".scores-appear-here-view-todays-games").empty();
+          $(".scores-appear-here-view-future-games").empty();
         $gameDivRow.empty();
         val = $(this).attr("value");
         console.log("You have chosen " + val);
+        var classNameForScore = "";
         switch (val) {
           case "View All Games":
             url = "/api/games";
             console.log("from btn", url);
             $gameDivRow.html("");
+            classNameForScore = ".scores-appear-here-view-all-games";
             break;
           case "View Today's Games":
             url = "/api/gamesbydate/today";
             console.log("from btn", url);
             $gameDivRow.html("");
+            classNameForScore = ".scores-appear-here-view-todays-games";
             break;
           case "View Past Games":
             url = "/api/gamesbydate/past";
+            classNameForScore = ".scores-appear-here-view-past-games";
             break;
           case "View Future Games":
             url = "/api/gamesbydate/future ";
+            classNameForScore = ".scores-appear-here-view-future-games";
             break;
           default:
             // code block
@@ -168,10 +176,10 @@
           method: "GET"
         }).then(function (data) {
           console.log(data);
-          if (data.length === 0); {
+          if (data.length === 0) {
             var $head = $("<h3>");
             $head.text("No games");
-            $(".scores-appear-here").prepend($head);
+            $(classNameForScore).prepend($head);
           }
 
           for (i = 0; i < data.length; i++) {
@@ -318,30 +326,33 @@
             $gameDiv.append($gameInfoDiv);
             $gameDiv.append($gameDataDiv);
 
-            //Create a paragraph to hold the buttons.
-            var $p = $("<p>");
+           //As per issue #79 only showed the "Real Time Score" button
+              //for today's games.
+              if (val === "View Today's Games") {
+                //Create a paragraph to hold the buttons.
+                var $p = $("<p>");
 
-            // Create a button for each player
-            var $btn = $("<button>");
-            //Make the button blue for home team.
-            $btn.addClass("btn btn-primary");
-            /* Assign the data attribute with the gameID to the button.
+                // Create a button for each player
+                var $btn = $("<button>");
+                //Make the button blue for home team.
+                $btn.addClass("btn btn-primary");
+                /* Assign the data attribute with the gameID to the button.
         This data attribute will be used to identify the game ID
         */
-            $btn.attr("data-game-id", data[i].id);
-            $btn.attr("id", "game-id");
+                $btn.attr("data-game-id", data[i].id);
+                $btn.attr("id", "game-id");
 
-            $btn.text("View Real Time Score Updates");
-            //Append the button to the paragraph.
-            $p.append($btn);
-            // Append the button to the applicable home team modal.
-            $($gameDiv).append($p);
+                $btn.text("View Real Time Score Updates");
+                //Append the button to the paragraph.
+                $p.append($btn);
+                // Append the button to the applicable home team modal.
+                $($gameDiv).append($p);
+              }
+              $gameDivRow.append($gameDiv);
 
-            $gameDivRow.append($gameDiv);
-
-            //Appends the row to the section that diplays the scoreboard.
-            $(".scores-appear-here").prepend($gameDivRow);
-            $(".scores-appear-here").append("<br>");
+              //Appends the row to the section that diplays the scoreboard.
+              $(classNameForScore).prepend($gameDivRow);
+           
           }
         });
       });
