--- a/public/scoretracker.html
+++ b/public/scoretracker.html
@@ -1,60 +1,75 @@
 <!DOCTYPE html>
 <HTML lang="en-us">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-      crossorigin="anonymous"
-    />
 
-    <title>index page</title>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+    crossorigin="anonymous" />
 
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-      crossorigin="anonymous"
-    ></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/scoretracker.js" type="text/javascript"></script>
-    <!--
+  <title>index page</title>
+  <!-- font awesome -->
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <!-- link to css -->
+  <link rel="stylesheet" href="./styles/style.css">
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/scoretracker.js" type="text/javascript"></script>
+  <!--
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    
     -->
-  </head>
-  <body>
-    <h1>Score Tracker</h1>
-    <h2 id="gameTime"></h2>
-    <h2 id="homeScore">Home: 0</h2>
-    <h2 id="visitorScore">Visitor: 0</h2>
-    <table id="goalTable" class="table table-striped">
-      <tr>
-        <th>Team</th>
-        <th>Player</th>
-        <th>Jersey</th>
-        <th>Time Remaining</th>
-      </tr>
-      <tr>
-        <td id="team"></td>
-        <td id="player"></td>
-        <td id="jersey"></td>
-        <td id="timeRemaining"></td>
-      </tr>
-    </table>
-  </body>
+</head>
+<style>
+  .card-body {
+    /* The image used */
+    background-image: url("./images/background.png");
+    height: 100%;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+</style>
+
+<body>
+  <div class="card">
+    <div class="card-body">
+      <a href="/gameselect"> <button type="button" class="btn btn-dark"><i class="fa fa-arrow-left"></i> BACK</button></a>
+      <a href="/"> <button type="button" class="btn btn-dark"> HOME</button></a>
+      <div class="head text-center">
+        <h1 class="scoreheading">Score Tracker</h1>
+        <h2 id="gameTime"></h2>
+        <h2 id="homeScore">Home: 0</h2>
+        <h2 id="visitorScore">Visitor: 0</h2>
+      </div>
+      <table id="goalTable" class="table table-striped">
+        <tr>
+          <th>Team</th>
+          <th>Player</th>
+          <th>Jersey</th>
+          <th>Time Remaining</th>
+        </tr>
+        <tr>
+          <td id="team"></td>
+          <td id="player"></td>
+          <td id="jersey"></td>
+          <td id="timeRemaining"></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+
+</body>
+
 </HTML>
